24092020
Minor optmisations and refactor

31082020
Added second "language" (dolan)

22012018
Added some pattern changes

21012018
Added case insensitivty

20012018
First version