@@ -1,50 +1,7 @@
 local name, Fugg = ...;
 
-Fugg.afro_pats = {
-    {
-        5,
-        "Well it was just sundown in small white town",
-        "They call it East Side Palmdale",
-        "When the afroman walked through the white land",
-        "Houses went up for sale"
-    },
-    {
-        5,
-        "Well I was standing on the corner sellin' rap cds",
-        "When I met a little girl named Jan",
-        "I let her ride in my Caddy",
-        "Because I didn't know her daddy was the leader of the Ku Klux Klan"
-    },
+Fugg.requested_pats = {
 
-    {
-        8,
-        "Have you ever went over a girl's house to fuck, but the pussy just ain't no good. I mean you gettin' upset because you can't get her wet, plus you in the wrong neighborhood",
-        "So you try to play it off and eat the pussy, but it take her so long to cum",
-        "Then a dude walk in, that's her big boyfriend, and he asks you where you from",
-        "So you wipe your mouth and you try to explain, you start talking real fast",
-        "But he already mad cause you fucking his woman, so he start beating on yo ass",
-        "Now your clothes all muddy, your nose all bloody, your dick was hard but now it's soft",
-        "You thought you had a girl to rock your world, now you still gotta go jack off"
-    },
-    {
-        5,
-        "You rub your ass against me on the disco floor",
-        "I asked you for your number and you said 'hell no!'",
-        "You always hang around me everyday. different women want to kick it, but you scare them away.",
-        "Now i get offended when you come around, cause i'm tired of my organs going up and dowwn."
-    },
-    {
-        2,
-        "Discovered by the Germans in 1904, they named it San Diego, which of course in German means a whale’s vagina."
-    },
-    {
-        2,
-        "You’re a real hooker. I’m gonna slap you in public."
-    },
-    {
-        2,
-        "I read somewhere their periods attract bears. Bears can smell the menstruation."
-    },
     {
         3,
         "Hahahaha I'm such a giant idiot I'm so so so so so so so sorry",
